# GlobalRender

./: .gitignore  BRDF.cpp  BRDF.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  Math.h  README.md  Ray.h  Render.cpp  Render.h  Scene.cpp  Scene.h  SurfaceOpticProperties.cpp  SurfaceOpticProperties.h  main.cpp  structs.h  txt2radiance.py
Drawio/: ClassDiagram.drawio  README.md
GlobalRender/: CMakeLists.txt  GlobalRender.cpp  GlobalRender.h
cornel_box0/: camera.txt  cornel_box0.shp  lights.txt  materials.txt
